feat: upgrade to angular17, improve the code quality of the application

--- a/src/app/arena-team/arena-team.component.html
+++ b/src/app/arena-team/arena-team.component.html
@@ -11,18 +11,46 @@
             <th class="text-center">Season Games</th>
             <th class="text-center">Season Wins</th>
             <th class="text-center">Week Games</th>
-            <th class="text-center">Week Wins</th>	
+            <th class="text-center">Week Wins</th>
           </thead>
           <tbody>
-            <tr *ngFor="let team of service.teams2$ | async" [ngClass]="team.faction" (click)="service.showTeam(team.arenaTeamId)">
-              <td><strong>{{ team.rank }}</strong></td>
-              <td><strong>{{ team.name }}</strong></td>
-              <td><strong>{{ team.captainName }}</strong></td>
-              <td><strong>{{ team.rating }}</strong></td>
-              <td><strong>{{ team.seasonGames }}</strong></td>
-              <td><strong>{{ team.seasonWins }}</strong> &nbsp; ({{ team.seasonGames == 0 ? 0 : team.seasonWins / team.seasonGames * 100 | number:'0' }}%)</td>
-              <td><strong>{{ team.weekGames }}</strong></td>
-              <td><strong>{{ team.weekWins }}</strong> &nbsp; ({{ team.weekGames == 0 ? 0 : team.weekWins / team.weekGames * 100 | number:'0' }}%)</td>
+            <tr
+              *ngFor="let team of service.teams2$ | async"
+              [class]="team.faction"
+              (click)="service.showTeam(team.arenaTeamId)"
+            >
+              <td>
+                <strong>{{ team.rank }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.name }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.captainName }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.rating }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.seasonGames }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.seasonWins }}</strong> &nbsp; ({{
+                  team.seasonGames == 0
+                    ? 0
+                    : ((team.seasonWins / team.seasonGames) * 100 | number)
+                }}%)
+              </td>
+              <td>
+                <strong>{{ team.weekGames }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.weekWins }}</strong> &nbsp; ({{
+                  team.weekGames == 0
+                    ? 0
+                    : ((team.weekWins / team.weekGames) * 100 | number)
+                }}%)
+              </td>
             </tr>
           </tbody>
         </table>
@@ -39,18 +67,46 @@
             <th class="text-center">Season Games</th>
             <th class="text-center">Season Wins</th>
             <th class="text-center">Week Games</th>
-            <th class="text-center">Week Wins</th>	
+            <th class="text-center">Week Wins</th>
           </thead>
           <tbody>
-            <tr *ngFor="let team of service.teams3$ | async" [ngClass]="team.faction" (click)="service.showTeam(team.arenaTeamId)">
-              <td><strong>{{ team.rank }}</strong></td>
-              <td><strong>{{ team.name }}</strong></td>
-              <td><strong>{{ team.captainName }}</strong></td>
-              <td><strong>{{ team.rating }}</strong></td>
-              <td><strong>{{ team.seasonGames }}</strong></td>
-              <td><strong>{{ team.seasonWins }}</strong> &nbsp; ({{ team.seasonGames == 0 ? 0 : team.seasonWins / team.seasonGames * 100 | number:'0' }}%)</td>
-              <td><strong>{{ team.weekGames }}</strong></td>
-              <td><strong>{{ team.weekWins }}</strong> &nbsp; ({{ team.weekGames == 0 ? 0 : team.weekWins / team.weekGames * 100 | number:'0' }}%)</td>
+            <tr
+              *ngFor="let team of service.teams3$ | async"
+              [class]="team.faction"
+              (click)="service.showTeam(team.arenaTeamId)"
+            >
+              <td>
+                <strong>{{ team.rank }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.name }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.captainName }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.rating }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.seasonGames }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.seasonWins }}</strong> &nbsp; ({{
+                  team.seasonGames == 0
+                    ? 0
+                    : ((team.seasonWins / team.seasonGames) * 100 | number)
+                }}%)
+              </td>
+              <td>
+                <strong>{{ team.weekGames }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.weekWins }}</strong> &nbsp; ({{
+                  team.weekGames == 0
+                    ? 0
+                    : ((team.weekWins / team.weekGames) * 100 | number)
+                }}%)
+              </td>
             </tr>
           </tbody>
         </table>
@@ -67,18 +123,46 @@
             <th class="text-center">Season Games</th>
             <th class="text-center">Season Wins</th>
             <th class="text-center">Week Games</th>
-            <th class="text-center">Week Wins</th>	
+            <th class="text-center">Week Wins</th>
           </thead>
           <tbody>
-            <tr *ngFor="let team of service.teams5$ | async" [ngClass]="team.faction" (click)="service.showTeam(team.arenaTeamId)">
-              <td><strong>{{ team.rank }}</strong></td>
-              <td><strong>{{ team.name }}</strong></td>
-              <td><strong>{{ team.captainName }}</strong></td>
-              <td><strong>{{ team.rating }}</strong></td>
-              <td><strong>{{ team.seasonGames }}</strong></td>
-              <td><strong>{{ team.seasonWins }}</strong> &nbsp; ({{ team.seasonGames == 0 ? 0 : team.seasonWins / team.seasonGames * 100 | number:'0' }}%)</td>
-              <td><strong>{{ team.weekGames }}</strong></td>
-              <td><strong>{{ team.weekWins }}</strong> &nbsp; ({{ team.weekGames == 0 ? 0 : team.weekWins / team.weekGames * 100 | number:'0' }}%)</td>
+            <tr
+              *ngFor="let team of service.teams5$ | async"
+              [class]="team.faction"
+              (click)="service.showTeam(team.arenaTeamId)"
+            >
+              <td>
+                <strong>{{ team.rank }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.name }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.captainName }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.rating }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.seasonGames }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.seasonWins }}</strong> &nbsp; ({{
+                  team.seasonGames == 0
+                    ? 0
+                    : ((team.seasonWins / team.seasonGames) * 100 | number)
+                }}%)
+              </td>
+              <td>
+                <strong>{{ team.weekGames }}</strong>
+              </td>
+              <td>
+                <strong>{{ team.weekWins }}</strong> &nbsp; ({{
+                  team.weekGames == 0
+                    ? 0
+                    : ((team.weekWins / team.weekGames) * 100 | number)
+                }}%)
+              </td>
             </tr>
           </tbody>
         </table>
