--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
-@import "~bootswatch/dist/cyborg/variables";
-@import "~bootstrap/scss/bootstrap";
-@import "~bootswatch/dist/cyborg/bootswatch";
+@import "../node_modules/bootswatch/dist/cyborg/variables";
+@import "../node_modules/bootstrap/scss/bootstrap";
+@import "../node_modules/bootswatch/dist/cyborg/bootswatch";
+@import "../node_modules/bootswatch/dist/cyborg/bootstrap.min.css";
 
 .alliance td, .alliance strong { color: #1A67F4; }
 .horde td, .horde strong { color: #CD0A0E; }
