--- a/src/app/arena-team/arena-team.component.html
+++ b/src/app/arena-team/arena-team.component.html
@@ -2,7 +2,9 @@
   <tabset>
     <tab heading="2v2" id="2v2">
       <div class="table-responsive">
-        <table class="table table-striped table-bordered table-condensed">
+        <table
+          class="table table-striped table-bordered table-condensed table-hover"
+        >
           <thead>
             <th class="text-center">Rank</th>
             <th class="text-center">Name</th>
@@ -58,7 +60,9 @@
     </tab>
     <tab heading="3v3">
       <div class="table-responsive">
-        <table class="table table-striped table-bordered table-condensed">
+        <table
+          class="table table-striped table-bordered table-condensed table-hover"
+        >
           <thead>
             <th class="text-center">Rank</th>
             <th class="text-center">Name</th>
@@ -114,7 +118,9 @@
     </tab>
     <tab heading="5v5">
       <div class="table-responsive">
-        <table class="table table-striped table-bordered table-condensed">
+        <table
+          class="table table-striped table-bordered table-condensed table-hover"
+        >
           <thead>
             <th class="text-center">Rank</th>
             <th class="text-center">Name</th>
