feat(arena-player): add arena-player page, add search component, renew icons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
 
   <app-next-arena-points />
 
+  <app-search-player />
+
   <div class="text-center">
     <router-outlet></router-outlet>
   </div>
