--- a/src/app/player-icons/player-icons.component.html
+++ b/src/app/player-icons/player-icons.component.html
@@ -1,3 +1,2 @@
-<img [src]="'assets/class/' + charClass + '.gif'" />
-&nbsp;
-<img [src]="'assets/race/' + race + '-' + gender + '.gif'" />
+<img width="32" height="32" [src]="'assets/class/' + charClass + '.png'" />
+<img width="32" height="32" [src]="'assets/race/' + race + '-' + gender + '.png'" />
