--- a/src/app/arena-player/arena-player.component.html
+++ b/src/app/arena-player/arena-player.component.html
@@ -24,7 +24,14 @@
       <th class="text-center">Week Games</th>
       <th class="text-center">Week Won</th>
       <th class="text-center">Week Lost</th>
-      <th class="text-center">Week Needed</th>
+      <th class="text-center">
+        Week Needed
+        <i
+          class="fas fa-info-circle text-info"
+          [popover]="'The games needed for the week are 30% of the total amount played by the team.'"
+          [outsideClick]="true"
+        ></i>
+      </th>
       <th class="text-center">Next AP</th>
     </thead>
     <tbody>
@@ -59,7 +66,15 @@
           }}%)
         </td>
         <td class="text-primary">
-          <strong>{{ arenaTeam.weekGames }}</strong>
+          <strong
+            >{{ arenaTeam.weekGames }} ({{
+              (arenaTeam.arenaTeamWeekGames === 0 || !arenaTeam.arenaTeamWeekGames
+                ? 0
+                : arenaTeam.weekGames / (arenaTeam.arenaTeamWeekGames / 100)
+              ).toFixed(2)
+            }}
+            %)</strong
+          >
         </td>
         <td class="text-success">
           <strong>{{ arenaTeam.weekWins }}</strong> &nbsp; ({{
