--- a/src/app/arena-team-member/arena-team-member.component.scss
+++ b/src/app/arena-team-member/arena-team-member.component.scss
@@ -3,8 +3,13 @@
 }
 
 .team-details td {
-  font-size: 18px;
+  font-size: 16px;
 }
+
+.team-details th i {
+  padding: 0px;
+}
+
 
 .text-yellow {
   color: yellow;
