--- a/src/app/player-icons/player-icons.component.html
+++ b/src/app/player-icons/player-icons.component.html
@@ -1,2 +1,2 @@
-<img width="32" height="32" [src]="'assets/class/' + charClass + '.png'" />
-<img width="32" height="32" [src]="'assets/race/' + race + '-' + gender + '.png'" />
+<img width="32" height="32" [src]="'assets/class/' + charClass() + '.png'" />
+<img width="32" height="32" [src]="'assets/race/' + race() + '-' + gender() + '.png'" />
