fix: remove unused service, update formula arena points source link

--- a/src/app/next-arena-points/next-arena-points.component.html
+++ b/src/app/next-arena-points/next-arena-points.component.html
@@ -66,7 +66,8 @@
         Sources: [<a href="https://wowwiki-archive.fandom.com/wiki/Arena_point_calculator#:~:text=If%20%5BRating%5D>1500,a%20fives%20team"
           >wowiki</a
         >,
-        <a href="https://github.com/azerothcore/azerothcore-wotlk/blob/master/src/server/game/Battlegrounds/ArenaTeam.cpp#L652"
+        <a
+          href="https://github.com/azerothcore/azerothcore-wotlk/blob/d40be8c1d4a4d99ae14be8c4211b84681c8c554f/src/server/game/Battlegrounds/ArenaTeam.cpp#L655"
           >azerothcore</a
         >]
       </div>
