fix: hashroutes, minor style improvement

--- a/src/app/next-arena-points/next-arena-points.component.html
+++ b/src/app/next-arena-points/next-arena-points.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="mb-5">
   <p class="text-center text-success">
     <img src="assets/ArenaPoints.png" width="24" height="24" style="vertical-align: sub" /> Next
     <a class="text-primary text-underline" style="cursor: pointer" (click)="isCollapsed = !isCollapsed">Arena Points distribution</a>
